# backend

./: .env  .gitignore  .prettierrc.toml  Cargo.toml  README.md  configuration.example.yaml  package.json  pnpm-lock.yaml  tsconfig.json
sql/: schema.sql
src/: cfg.rs  db.rs  main.rs  main.ts
src/db/: bin.ts  index.ts  queries.ts
src/routes/: bin.ts
src/utils/: index.ts  types.ts
test/: endpoitns.txt
