[package]
name = "okiba-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
config = "0.13.3"
deadpool-postgres = { version = "0.10.5", features = ["serde"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.19"
serde = { version = "1.0.178", features = ["derive"] }
tokio-postgres = "0.7.8"
